--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
 		"@types/react": "18.0.28",
 		"@types/react-dom": "18.0.11",
 		"@types/styled-components": "^5.1.26",
-		"next": "13.2.4",
-		"react": "18.2.0",
-		"react-dom": "18.2.0",
+		"eslint-config-next": "^13.3.2",
+		"next": "^13.3.2",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
 		"styled-components": "^5.3.9",
 		"typescript": "5.0.2"
 	},
